1. Added InstallerClass to SimiasClient to set the installed location of Simias.exe in the SimiasDirectoryMapping files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5465 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasApp/Simias.csproj
+++ b/simias/src/SimiasApp/Simias.csproj
@@ -94,6 +94,11 @@
                     AssemblyName = "SimiasClient"
                     HintPath = "..\..\..\..\final.enterprise\web\bin\SimiasClient.dll"
                 />
+                <Reference
+                    Name = "System.Configuration.Install"
+                    AssemblyName = "System.Configuration.Install"
+                    HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Configuration.Install.dll"
+                />
             </References>
         </Build>
         <Files>
@@ -155,6 +160,11 @@
                 <File
                     RelPath = "Simias.cs"
                     SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "SimiasAppInstallerClass.cs"
+                    SubType = "Component"
                     BuildAction = "Compile"
                 />
                 <File
