--- a/simias/src/SimiasClient/AssemblyInfo.cs.in
+++ b/simias/src/SimiasClient/AssemblyInfo.cs.in
@@ -56,7 +56,7 @@ using System.Runtime.CompilerServices;
 //       documentation for more information on this.
 //
 [assembly: AssemblyDelaySign(false)]
-#if WINDOWS
+#if STRONGNAME
 [assembly: AssemblyKeyFile("simiasclient.snk")]
 #else
 [assembly: AssemblyKeyFile("")]
