Add a mkdir command for c:/temp
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5474 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/package/windows/Makefile.am
+++ b/simias/package/windows/Makefile.am
@@ -80,9 +80,10 @@ $(MSI_FILE): issabld $(MSM_FILE) $(MSI).ism
 		CMD='cp -f $@ "$(INSTALL_PKGS)"'; \
 		echo $$CMD; \
 		eval $$CMD 
-        @CMD='cp -f "$(MSI_DISK1)" "/cygdrive/c/temp/"';
-	echo $$CMD;
-	eval $$CMD
+	@mkdir -p "/cygdrive/c/temp/"; \
+      @CMD='cp -f "$(MSI_DISK1)" "/cygdrive/c/temp/"'; \
+		echo $$CMD; \
+		eval $$CMD
 
 $(MSM_FILE): issabld $(PACKAGE)-install $(MSM).ism
 	@rm -f $@ "$(MSM_DISK1)" "$(MSM_LOG_FILE)"
