1. Trim quotes off of the store path.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5492 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasApp/Simias.csproj
+++ b/simias/src/SimiasApp/Simias.csproj
@@ -164,7 +164,7 @@
                 />
                 <File
                     RelPath = "SimiasAppInstallerClass.cs"
-                    SubType = "Component"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
