Added cookie support in gsoap library
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5518 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/libifolder/Makefile.am
+++ b/ifolder/src/libifolder/Makefile.am
@@ -18,7 +18,7 @@ libifolderclient_la_SOURCES = \
 
 libifolderclient_la_CFLAGS = \
 	$(SIMIAS_CLIENT_C_CFLAGS) \
-	-DWITH_NONAMESPACES
+	-DWITH_NONAMESPACES -DWITH_COOKIES
 
 libifolderclient_la_LDFLAGS = \
 	$(SIMIAS_CLIENT_C_LIBS)
