Added Cookie support in libsimias for gsoap
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5519 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -17,7 +17,7 @@ libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c simias.c simias.h simiasweb.c simiasweb.h
  	
 libsimias_la_CFLAGS = \
-	-DWITH_NONAMESPACES
+	-DWITH_NONAMESPACES -DWITH_COOKIES
 
 envC.c: $(srcdir)/stdsoap2.c
 	> $(srcdir)/env.h
