--- a/simias-client-c.pc.in
+++ b/simias-client-c.pc.in
@@ -10,6 +10,6 @@ exec_prefix=@_exec_prefix_@
 libdir=@_libdir_@
 includedir=@_prefix_@/include/simias
 
-Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event
+Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event ${libdir}/libsimias-manager.a
 Cflags: -I${includedir}
 
