Updated to be included in the pc file for pkgconfig
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5535 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/libsimias-manager/Makefile.am
+++ b/simias/src/SimiasClient/libsimias-manager/Makefile.am
@@ -53,6 +53,9 @@ lib_LIBRARIES = libsimias-manager.a
 libsimias_manager_a_SOURCES = 	simias-manager.c \
 				simias-manager.h
 
+pkginclude_HEADERS = \
+				simias-manager.h
+
 if LINUX
 
 libsimias_manager_a_CXXFLAGS = -c
