Updated the OSXClient to use the default simias if there is no /etc/simias
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5536 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/OSXClient/src/config.h.in
+++ b/ifolder/src/OSXClient/src/config.h.in
@@ -23,3 +23,4 @@
 
 #define IFOLDER_PREFIX "@prefix@"
 #define SIMIAS_BINARY "@prefix@/bin/simias"
+#define DEFAULT_SIMIAS_PATH "@prefix@/web/bin/Simias.exe"
