Added search capability to StoreBrowser (uses updated browser web service in simias.dll).  Need to build/check-in updated StoreBrowser.exe.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5554 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
+++ b/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
@@ -182,6 +182,21 @@
                     DependentUpon = "PropertyForm.cs"
                     BuildAction = "EmbeddedResource"
                 />
+                <File
+                    RelPath = "SearchEditor.cs"
+                    SubType = "UserControl"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "SearchEditor.resx"
+                    DependentUpon = "SearchEditor.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "SearchExpression.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
