--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -133,15 +133,14 @@ AC_SUBST(COMMON_MAINTAINER_CLEAN_FILES)
 #
 # Set pkg-config variables
 #
-GTK_SHARP_MINIMUM_VERSION=1.0.4
-GNOME_SHARP_MINIMUM_VERSION=1.0.4
-GCONF_SHARP_MINIMUM_VERSION=1.0.4
-GDK20_MINIMUM_VERSION=2.2.3
+GTK_SHARP2_MINIMUM_VERSION=1.9.0
+GNOME_SHARP2_MINIMUM_VERSION=1.9.0
+GCONF_SHARP2_MINIMUM_VERSION=1.9.0
+GDK20_MINIMUM_VERSION=2.6.0
 ATK_MINIMUM_VERSION=1.2.4
-AC_SUBST(GTK_SHARP_MINIMUM_VERSION)
-AC_SUBST(GNOME_SHARP_MINIMUM_VERSION)
-AC_SUBST(GLADE_SHARP_MINIMUM_VERSION)
-AC_SUBST(GCONF_SHARP_MINIMUM_VERSION)
+AC_SUBST(GTK_SHARP2_MINIMUM_VERSION)
+AC_SUBST(GNOME_SHARP2_MINIMUM_VERSION)
+AC_SUBST(GCONF_SHARP2_MINIMUM_VERSION)
 AC_SUBST(GDK20_MINIMUM_VERSION)
 AC_SUBST(ATK_MINIMUM_VERSION)
 
@@ -216,7 +215,7 @@ case $IFOLDER_OS in
         #
         # Set pkg-config variables
         #
-        PKG_CONFIG_REQUIRES="simias >= 1.0 gtk-sharp >= $GTK_SHARP_MINIMUM_VERSION"
+        PKG_CONFIG_REQUIRES="simias >= 1.0 gtk-sharp-2.0 >= $GTK_SHARP2_MINIMUM_VERSION"
 		PKG_CONFIG_LIBS="/r:Novell.iFolder.dll /r:Novell.iFolder.UI.gtk.dll /r:TrayIcon.dll"
 		PKG_CONFIG_CONFLICTS=""
 
@@ -453,13 +452,13 @@ esac
 
 case $IFOLDER_OS in
     linux)
-        PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= $GTK_SHARP_MINIMUM_VERSION)
+        PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-2.0 >= $GTK_SHARP2_MINIMUM_VERSION)
         GTK_SHARP_PREFIX=`pkg-config --variable=prefix gtk-sharp`
         GTK_SHARP_VERSION=`pkg-config --modversion gtk-sharp`
         AC_SUBST(GTK_SHARP_PREFIX)
         AC_SUBST(GTK_SHARP_LIBS)
 
-        PKG_CHECK_MODULES(GNOME_SHARP, gnome-sharp >= $GNOME_SHARP_MINIMUM_VERSION)
+        PKG_CHECK_MODULES(GNOME_SHARP, gnome-sharp-2.0 >= $GNOME_SHARP2_MINIMUM_VERSION)
         AC_SUBST(GNOME_SHARP_PREFIX)
         AC_SUBST(GNOME_SHARP_LIBS)
 
@@ -475,7 +474,7 @@ case $IFOLDER_OS in
         AC_SUBST(ATK_CFLAGS)
         AC_SUBST(ATK_LIBS)
         
-		PKG_CHECK_MODULES(GCONF_SHARP, gconf-sharp > $GCONF_SHARP_MINIMUM_VERSION)
+		PKG_CHECK_MODULES(GCONF_SHARP, gconf-sharp-2.0 > $GCONF_SHARP2_MINIMUM_VERSION)
 		AC_SUBST(GCONF_SHARP_PREFIX)
 		AC_SUBST(GCONF_SHARP_LIBS)
         
