Changed the minimum gtk-sharp2 version to be 1.9.5.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5561 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/linux/ifolder3.spec.in
+++ b/ifolder/package/linux/ifolder3.spec.in
@@ -38,7 +38,7 @@ Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
 Requires     : simias >= 1.1
-Requires     : gtk-sharp >= 1.0.9
+Requires     : gtk-sharp2 >= 1.9.5
 #Requires     : libgdiplus >= 1.1.7
 Obsoletes    : %{name} <= %{version}
 
