Changed our dependency from gdk-2.0 to gtk+-2.0 since the gdk-2.0.pc file comes in the gtk2-devel.rpm.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5575 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/TrayIcon/libtrayicon/Makefile.am
+++ b/ifolder/src/TrayIcon/libtrayicon/Makefile.am
@@ -1,5 +1,5 @@
-TRAY_ICON_CFLAGS = $(GDK20_CFLAGS) $(ATK_CFLAGS)
-TRAY_ICON_LIBS = $(GDK20_LIBS) $(ATK_LIBS)
+TRAY_ICON_CFLAGS = $(GTK20_CFLAGS) $(ATK_CFLAGS)
+TRAY_ICON_LIBS = $(GTK20_LIBS) $(ATK_LIBS)
 
 EXTRA_DIST = $(srcdir)/eggtrayicon.h
 
