--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -136,12 +136,12 @@ AC_SUBST(COMMON_MAINTAINER_CLEAN_FILES)
 GTK_SHARP2_MINIMUM_VERSION=1.9.5
 GNOME_SHARP2_MINIMUM_VERSION=1.9.5
 GCONF_SHARP2_MINIMUM_VERSION=1.9.0
-GDK20_MINIMUM_VERSION=2.6.0
+GTK20_MINIMUM_VERSION=2.6.0
 ATK_MINIMUM_VERSION=1.2.4
 AC_SUBST(GTK_SHARP2_MINIMUM_VERSION)
 AC_SUBST(GNOME_SHARP2_MINIMUM_VERSION)
 AC_SUBST(GCONF_SHARP2_MINIMUM_VERSION)
-AC_SUBST(GDK20_MINIMUM_VERSION)
+AC_SUBST(GTK20_MINIMUM_VERSION)
 AC_SUBST(ATK_MINIMUM_VERSION)
 
 #
@@ -466,9 +466,9 @@ case $IFOLDER_OS in
 #        AC_SUBST(GLADE_SHARP_PREFIX)
 #        AC_SUBST(GLADE_SHARP_LIBS)
 
-        PKG_CHECK_MODULES(GDK20, gdk-2.0 >= $GDK20_MINIMUM_VERSION)
-        AC_SUBST(GDK20_CFLAGS)
-        AC_SUBST(GDK20_LIBS)
+        PKG_CHECK_MODULES(GTK20, gtk+-2.0 >= $GTK20_MINIMUM_VERSION)
+        AC_SUBST(GTK20_CFLAGS)
+        AC_SUBST(GTK20_LIBS)
 
         PKG_CHECK_MODULES(ATK, atk >= $ATK_MINIMUM_VERSION)
         AC_SUBST(ATK_CFLAGS)
