Added m4_package_allow statement to clean up errors during cofiguration. Fixed spec file to include the SimiasAPI.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5581 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -5,6 +5,7 @@ let "BUILDNUM=`date +%G%j`-2000000"
 VERSION=$VERSION.$BUILDNUM.1
 AM_MAINTAINER_MODE
 AC_PROG_CC
+m4_pattern_allow(PKG_CONFIG)
 
 #
 # Check for a valid operating system and C# compiler
