--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -1,6 +1,7 @@
 AC_INIT(src/WebService/iFolder.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
+m4_pattern_allow(PKG_CONFIG)
 
 AM_INIT_AUTOMAKE(ifolder3, 3.1)
 let "BUILDNUM=`date +%G%j`-2000000"
