--- a/simias/package/linux/simias.spec.in
+++ b/simias/package/linux/simias.spec.in
@@ -125,6 +125,7 @@ fi
 %{prefix}/web/bin/SimiasLib.dll
 %{prefix}/web/bin/FlaimWrapper.so
 %{prefix}/web/bin/log4net.dll
+%{prefix}/web/bin/SimiasAPIService.Web.dll
 %{prefix}/web/Global.asax
 %{prefix}/web/modules/SimiasLib.conf
 %{prefix}/web/Login.ashx
@@ -132,4 +133,5 @@ fi
 %{prefix}/web/Simias.asmx
 %{prefix}/web/SyncHandler.ashx
 %{prefix}/web/web.config
+%{prefix}/web/SimiasAPI.asmx
 #%config(noreplace) %{prefix}/web/web.config
