--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -2,14 +2,14 @@
   <section name="Domain">
     <setting name="ServerName" value="Simias Server" />
     <setting name="AdminName" value="admin" />
-    <setting name="AdminPassword" value="simias" /> 
+    <setting name="PasswordName" value="simias" />
   </section>
   <section name="Authentication">
 	<setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="StoreProvider">
-    <setting name="Assembly" value="SimiasLib.dll" />
-    <setting name="Type" value="Simias.Storage.Provider.Flaim.FlaimProvider" />
+    <setting name="Assembly" value="@_StoreProviderAssembly_@" />
+    <setting name="Type" value="@_StoreProviderType_@" />
   </section>
 </configuration>
