Update version to 1.3 or 3.3 and make simias-enterprise dependency be same build version--defect 133297
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5636 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/package/linux/simias-bonjour.spec.in
+++ b/bonjour/package/linux/simias-bonjour.spec.in
@@ -23,7 +23,7 @@
 
 %define prefix /opt/novell/ifolder3
 
-Summary      : simias-bonjour 1.0
+Summary      : simias-bonjour
 Name         : @PACKAGE@
 Version      : @VERSION@
 Release      : 1
@@ -36,7 +36,7 @@ Vendor       : www.ifolder.com
 Packager     : Calvin Gaisford <cgaisford@novell.com>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : simias >= 1.1
+Requires     : simias >= @VERSION@ 
 Requires	 : mDNSResponder
 PreReq		 : nscd
 Obsoletes    : %{name} <= %{version}
