--- a/nautilus-ifolder/package/nautilus-ifolder3.spec.in
+++ b/nautilus-ifolder/package/nautilus-ifolder3.spec.in
@@ -39,7 +39,7 @@ BuildRoot    : %{_tmppath}/%{name}-%{version}
 
 Requires     : nautilus >= 2.5
 Requires     : simias >= 1.1
-Requires     : ifolder3 >= 3.1
+Requires     : ifolder3 >= @VERSION@ 
 Obsoletes    : nautilus-ifolder
 
 #=============================================================================
