defect133297 Update versioning to 1.2 and 3.2 and require same build version
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5641 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/addressbook/package/linux/addressbook.spec.in
+++ b/addressbook/package/linux/addressbook.spec.in
@@ -36,7 +36,7 @@ Vendor       : <unknown>
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : simias >= 1.0
+Requires     : simias >= @VERSION@
 Requires     : mono-core >= 1.0
 Requires     : mono-data >= 1.0
 Requires     : mono-remoting >= 1.0
